--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -117,3 +117,30 @@ body{
     scroll-snap-align: center;
   }
 }
+
+.Download-progress-indicator{
+  height: 5rem;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  margin:1rem auto;
+  position: relative;
+  overflow: hidden;
+  isolation: isolate;
+
+  &::before {
+      content: "";
+      position: absolute;
+      z-index: 10;
+      background: conic-gradient(red calc(var(--percentage) - 5%), white var(--percentage));
+      inset: 0;
+    }
+
+  &::after{
+    content:"";
+    position: absolute;
+    z-index: 10;
+    background-color: var(--purple-blue);
+    inset: 6px;
+    border-radius: 50%;
+  }
+}
