--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -125,6 +125,41 @@ body{
   }
 }
 
+.Product-card .Card-image-loader{
+  position:relative;
+  overflow: hidden;
+  isolation: isolate;
+  &:before{
+    content:"";
+    position: absolute;
+    width: 200%;
+    height: 50%;
+    background: linear-gradient(rgba(255, 255, 255, 0.108),rgba(255, 255, 255, 0.103), rgba(255, 255, 255, 0.105));
+    rotate: -45deg;
+    top: 0;
+    z-index: -10;
+    animation: animate-card-loader 2s linear infinite;
+  }
+    &:after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background-color: rgba(255, 255, 255, 0.074);
+      backdrop-filter: blur(5px);
+      top: 0;
+      z-index: -9;
+    }
+}
+@keyframes animate-card-loader{
+  0%{
+    left: -150%;
+  }
+  100%{
+    left: 150%;
+  }
+}
+
+
 .Download-progress-indicator{
   height: 5rem;
   aspect-ratio: 1;
@@ -151,3 +186,5 @@ body{
     border-radius: 50%;
   }
 }
+
+/* mongodb+srv: //kelvinmitau05:kelvin-mongodb@cluster0.68fch.mongodb.net/appspot?retryWrites=true&w=majority */
